--- a/resources/broken-network/deployment.yaml
+++ b/resources/broken-network/deployment.yaml
@@ -4,15 +4,15 @@ metadata:
   annotations:
     reloader.stakater.com/auto: 'true'
   labels:
-    app.kubernetes.io/instance: broken-ingress
+    app.kubernetes.io/instance: broken-network
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: microservice-chart
     app.kubernetes.io/version: v1.5.0
-    argocd.argoproj.io/instance: broken-ingress
+    argocd.argoproj.io/instance: broken-network
     canaryDelivery: 'false'
     helm.sh/blueprint-version: 5.4.1
     helm.sh/chart: microservice-chart-v1.5.0
-  name: broken-ingress-microservice-chart
+  name: broken-network-microservice-chart
   namespace: diego
 spec:
   progressDeadlineSeconds: 600
@@ -20,7 +20,7 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app.kubernetes.io/instance: broken-ingress
+      app.kubernetes.io/instance: broken-network
       app.kubernetes.io/name: microservice-chart
       canaryDelivery: 'false'
   strategy:
@@ -33,7 +33,7 @@ spec:
       creationTimestamp: null
       labels:
         aadpodidbinding: diego-pod-identity
-        app.kubernetes.io/instance: broken-ingress
+        app.kubernetes.io/instance: broken-network
         app.kubernetes.io/name: microservice-chart
         app.kubernetes.io/version: v1.5.0
         canaryDelivery: 'false'
