--- a/resources/broken-network/service.yaml
+++ b/resources/broken-network/service.yaml
@@ -3,15 +3,15 @@ kind: Service
 metadata:
   annotations:
   labels:
-    app.kubernetes.io/instance: broken-ingress
+    app.kubernetes.io/instance: broken-network
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/name: microservice-chart
     app.kubernetes.io/version: v1.5.0
-    argocd.argoproj.io/instance: broken-ingress
+    argocd.argoproj.io/instance: broken-network
     canaryDelivery: 'false'
     helm.sh/blueprint-version: 5.4.1
     helm.sh/chart: microservice-chart-v1.5.0
-  name: broken-ingress-microservice-chart
+  name: broken-network-microservice-chart
   namespace: diego
 spec:
   ports:
@@ -20,7 +20,7 @@ spec:
       protocol: TCP
       targetPort: 8000
   selector:
-    app.kubernetes.io/instance: broken-ingress
+    app.kubernetes.io/instance: broken-network
     app.kubernetes.io/name: microservice-chart
     canaryDelivery: 'false'
   type: ClusterIP
