--- a/argocd/broken-apps/broken-pod.yaml
+++ b/argocd/broken-apps/broken-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: broken-network
+  name: broken-pod
   # You'll usually want to add your resources to the argocd namespace.
   namespace: argocd
   # Add this finalizer ONLY if you want these to cascade delete.
@@ -12,7 +12,7 @@ metadata:
     # - resources-finalizer.argocd.argoproj.io/background
   # Add labels to your application object.
   labels:
-    name: broken-network
+    name: broken-pod
 spec:
   project: terraform-argocd-project
   source:
